# patternripple-pages

./: .gitignore  BingSiteAuth.xml  README.md  next.config.js  package-lock.json  package.json  panek_video_program.py  robots.txt  sanity.config.ts  sitemap.xml  tailwind.config.js  tsconfig.json
.github/workflows/: build-linux.yml
_archive/lab/: LAZ1011 LAZ1123 Overview.txt
app/: globals.css  layout.tsx  middleware.ts  not-found.tsx  page.tsx  products.ts
components/: BuyButton.tsx  Search.tsx  TranslateWidget.tsx
public/: 90s-midi.html  app.js  audio-loop-creator-mobile.html  audio-looper-panek.html  audio-processor.html  bubble.html  bulk-image-resizer.html  checker.html  color-blindness-simulator.html  colorway-generator.html  cqs_rs_docs.html  dystopian-chess.html  exif-stripper.html  favicon-generator.html  image-to-ascii.html  motif-painter.html  nonogram-generator.html  pattern-checker-smoothsnap.html  pattern-checker.html  pattern-repeat-engine.html  patternripple-3d-pro.html  patternripple-3d.html  patternripple-admin.html  photo-compressions-free.html  png2svg.html  privateseamlesstool.html  privateseamlesstool2.html  property-slideshow-maker.html  qr-code-generator.html  repo-canvas.html  robots.txt  seamless-pattern-creator.html  sitemap.xml  slot.html  tower-defense-3d.html  tower-defense-geometric-galaxy.html  video-to-gif.html
public/handdraw/src-tauri/: Cargo.toml  tauri.conf.json
public/handdraw/src-tauri/src/: encoder.rs  main.rs  project.rs  renderer.rs
schemas/: index.ts  pattern.ts
scripts/: build-search-index.js  copy-ffmpeg.js
(+193 files in other folders)
