[package]
name = "handdraw"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
chrono = "0.4"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "1.5" }

[lib]
name = "handdraw_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "handdraw"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
